# click-cli-boilerplates

./: CHANGELOG.md  README.md
subcommands/: README.md  pyproject.toml
subcommands/click_cli_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
subcommands/src/: entity_1.py  entity_2.py  main.py
subcommands/tests/: conftest.py  test_entity_1.py  test_entity_2.py
