[project]
name = "click-cli-boilerplate"
version = "0.1.0"
description = "A boilerplate for creating CLI applications with Click"
readme = "README.md"
dependencies = ["Click>=8.1.7"]


[project.scripts]
a = "src:cli"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = false


[tool.setuptools.packages.find]
include = ["src"]
exclude = ["docs*", "tests*"]


[tool.pytest.ini_options]
pythonpath = ["src"]
